...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbaradd">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top">

            </Spinner>

            <EditText
                android:id="@+id/subject_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:hint="@string/Subject_meeting"
                android:textSize="@dimen/size_text">

...
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/participants_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:ems="10"
                    android:hint="@string/MailParticipant"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/size_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Add_email"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/addemail"
                android:textSize="@dimen/size_text"
                app:cornerRadius="30dp" />
...
                android:id="@+id/Email_List"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="@dimen/size_text" />

            <Button
                android:id="@+id/BtnTimePickersStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/SelectTimeMeeting"
                android:textSize="@dimen/size_text" />
...
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/TimeEndTextView"
                android:textSize="@dimen/size_text" />

            <Button
                android:id="@+id/BtnDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/SelectDateMeeting"
                android:textSize="@dimen/size_text" />
...
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/DateStartTextView"
                android:textSize="@dimen/size_text" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:backgroundTint="#CE0A24"
                android:text="@string/creat"
...
