<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@id/icone_color"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_24dp" />

    <TextView
        android:id="@+id/item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="Ma réu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/icone_color"
        app:layout_constraintStart_toEndOf="@+id/icone_color"
        app:layout_constraintTop_toTopOf="@+id/icone_color" />

    <TextView
        android:id="@+id/item_list_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="Salut les geek"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/icone_color"
        app:layout_constraintTop_toBottomOf="@+id/item_list" />

    <ImageButton
        android:id="@+id/item_list_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/item_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>